# JNIDemo

./: .gitignore  LICENSE  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/garena/game/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/garena/game/myapplication/: CallJava.java  MainActivity.java
app/src/test/java/com/garena/game/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libsojsoncpp/src/main/cpp/: CMakeLists.txt
libsojsoncpp/src/main/cpp/jsoncpp/: CMakeLists.txt
